--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.3.2",
     "@vitejs/plugin-vue": "^5.2.1",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
