--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.0",
+    "axios": "^1.9.0",
     "gsap": "^3.12.7",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
