--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "work": "node worker.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "npm": "^10.8.0",
     "simple-encryptor": "^4.0.0"
   }
