--- a/src/api/.env
+++ b/src/api/.env
@@ -1,4 +1,5 @@
 PORT=5734
 JWT_SECRET = hoangladai
 EMAIL_USER=bachhuy410@gmail.com
-EMAIL_PASS=pvsy yuyd qdkg gmdu
+EMAIL_PASS=mvoh huql ynoc oloe
+
