--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+.env*
 
 node_modules
 .DS_Store
@@ -29,3 +30,4 @@ coverage
 
 *.tsbuildinfo
 /nbproject/private/
+.gitignore
