--- a/src/api/.env
+++ b/src/api/.env
@@ -1,5 +1,6 @@
 PORT=5734
 JWT_SECRET = hoangladai
 EMAIL_USER=bachhuy410@gmail.com
-EMAIL_PASS=mvoh huql ynoc oloe
+EMAIL_PASS=swis qvjx vbpo cgfs
+
 
