--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.0.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "gsap": "^3.12.7",
     "pinia": "^3.0.2",
     "primeflex": "^4.0.0",
